[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libero"
version = "0.1.0"
description = "LIBERO: Benchmarking Knowledge Transfer for Lifelong Robot Learning"
readme = "README.md"
authors = [
  { name = "Bo Liu" },
  { name = "Yifeng Zhu" },
  { name = "Chongkai Gao" },
  { name = "Yihao Feng" },
  { name = "Qiang Liu" },
  { name = "Yuke Zhu" },
  { name = "Peter Stone" }
]
requires-python = ">=3"
dependencies = [
  "hydra-core==1.2.0",
  "easydict==1.9",
  "opencv-python==4.6.0.66",
  "robomimic==0.2.0",
  "einops==0.4.1",
  "thop==0.1.1-2209072238",
  "robosuite==1.4.0",
  "bddl==1.0.1",
  "future==0.18.2",
  "matplotlib==3.5.3",
  "cloudpickle==2.1.0",
  "gym==0.25.2"
]

[project.scripts]
"lifelong.main" = "libero.lifelong.main:main"
"lifelong.eval" = "libero.lifelong.evaluate:main"
"libero.config_copy" = "scripts.config_copy:main"
"libero.create_template" = "scripts.create_template:main"
